# hypha-agents

./: .cursorrules  .env.example  .gitignore  CNAME  README.md  config-overrides.js  design.md  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.js  vite.config.ts
.cursor/rules/: coding.mdc
.github/workflows/: deploy-frontend.yml  deploy.yml.disabled  docker-publish.yml
docker/: Dockerfile
docs/: CNAME  service-type-annotation.md  tutorial.md
elia_engine/: __init__.py  __main__.py  hypha_service.py  service.py
elia_engine/services/: plotting.py
hypha_agent_engine/: __init__.py  __main__.py  asgi_service.py  hypha_service.py  service.py  terminal.py  test_terminal.py
hypha_agents/: __init__.py  __main__.py  asgi_service.py  hypha_artifact.py  hypha_service.py  service.py  terminal.py  test_terminal.py
public/: CNAME  hypha-kernel-service.js  index copy.html  index.html  kernel.worker.min.js.map  manifest.json  playground.html  pyodide-worker.js  site.webmanifest  web-python-kernel.js  web-python-kernel.min.js  web-python-kernel.min.js.map  web-python-kernel.min.mjs  web-python-kernel.min.mjs.map
scripts/: copy-monaco.js  copy-thebe.sh  create_collection.py  example_chatbot.py  telecom_team_example.py
src/: App.tsx  github-markdown.css  index.css  index.tsx  kernel.worker.ts  serviceWorkerRegistration.ts
src/components/: About.tsx  AdminResourceCard.tsx  AgentLabLayout.tsx  Chat.tsx  CodeCell.tsx  Create.tsx  DenoTerminalPanel.tsx  Edit.tsx  FileTree.tsx  Footer.tsx  JupyterOutput.tsx  LoginButton.tsx  ModelTester.tsx  ModelTrainer.tsx  ModelValidator.tsx  MyArtifacts.tsx  Navbar.tsx  OutputDisplay.css  OutputDisplay.tsx  PWAInstallPrompt.tsx  PartnerScroll.tsx  ResourceCard.tsx  ResourceDetails.tsx  ResourceGrid.tsx  SearchBar.tsx  Snackbar.tsx  Splash.tsx  Upload.tsx
src/config/: monaco.ts
src/hooks/: useAgentOperations.ts  useCanvasPanel.ts  useChatCompletion.ts  useEnvironmentState.ts  useKernelManager.ts  useNotebookCommands.ts  useNotebookInitialization.ts  useNotebookKeyboardShortcuts.ts  useNotebookOperations.ts  useSidebar.ts  useTraverseTree.ts  useUrlSync.ts
src/pages/: AgentLab.tsx  CellManager.ts  ChatPage.tsx  CollabTest.tsx  NotebookPage.css  NotebookPage.tsx  index.tsx
src/providers/: HyphaYjsProvider.ts  ProjectsProvider.tsx
src/store/: hyphaStore.ts
src/styles/: ansi.css  globals.css  jupyter.css  notebook.css
src/types/: ansi-to-html.d.ts  index.ts  notebook.ts  project.ts  resource.ts
src/utils/: CellHistoryManager.ts  agentLabTypes.ts  ansi-utils.ts  chatCompletion.ts  env.ts  fileTreeConverter.ts  kernelUtils.ts  modelSettings.ts  notebookUtils.ts  plotly.ts  (+6 more)
tests/: __init__.py  conftest.py  test_hypha_artifact.py
(+58 files in other folders)
